# ab

./: .gitignore  .readthedocs.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  FIXTURES.md  LICENSE  MANIFEST.in  MOCKS.md  README.md  ab_migrate.md  pr_analysis.md  pyproject.toml
.claude/commands/: commit.md
.claude/workflows/: DISCOVER.md
.github/workflows/: workflow.yml
.specify/memory/: constitution.md
ab/: __init__.py  cache.py  client.py  config.py  exceptions.py  http.py
ab/api/: __init__.py  base.py  pagination.py  route.py  rtd.py
ab/auth/: __init__.py  base.py  db.py  file.py  memory.py  session.py
ab/cli/: __init__.py  __main__.py  aliases.py  discovery.py  formatter.py  parser.py  route_resolver.py
ab/progress/: __init__.py  app.py  captures.py  db.py  example_gen.py  example_index.py  example_verify.py  fixtures_generator.py  gates.py  harmony.py  instructions.py  models.py  parsers.py  renderer.py  report.py  route_index.py  scanner.py  workbench.py
docs/: FIXTURES.md  Makefile  conf.py  index.md  quickstart.md
docs/_static/: favicon.ico:Zone.Identifier
docs/api/: abc_reports.md  abc_test.md  account.md  address.md  admin.md  autoprice.md  catalog.md  commodities.md  commodity_maps.md  companies.md  company_setup.md  contacts.md  dashboard.md  documents.md  esign.md  intacct.md  jobs.md  lookup.md  lots.md  notes.md  notifications.md  partners.md  payments.md  reports.md  rfq.md  sellers.md  shipments.md  sms_templates.md  users.md  values.md  views.md  web2lead.md  webhooks.md
docs/models/: account.md  address.md  admin.md  autoprice.md  base.md  catalog.md  commodities.md  common.md  companies.md  company_setup.md  contacts.md  dashboard.md  documents.md  esign.md  forms.md  intacct.md  jobs.md  lookup.md  lots.md  notes.md  notifications.md  payments.md  rfq.md  sellers.md  shipments.md  sms_templates.md  users.md  views.md  web2lead.md
examples/: __init__.py  __main__.py  _acme.py  _agent.py  _capture.py  _catalog.py  _commodities.py  _companies.py  _companies_elabel_compare.py  _contacts.py  _documents.py  _email_sms.py  _forms.py  _freight_providers.py  _notes.py  _notes_global.py  _payments.py  _rfq.py  _runner.py  _sellers.py  _tracking.py  _views.py  _web2lead.py  abc_reports.py  abc_test.py  account.py  address.py  admin.py  agent.py  autoprice.py  catalog.py  commodities.py  commodity_maps.py  companies.py  companies_elabel_compare.py  companies_extended.py  company_setup.py  constants.py  contacts.py  contacts_extended.py  (+30 more)
examples/jobs/: __init__.py  __main__.py  core.py  email.py  feedback.py  form.py  items.py  notes.py  (+9 more)
html/: progress.html  rm_runner.html
scripts/: capture_missing.py  generate_endpoint_docs.py  generate_progress.py  generate_request_fixtures.py  ingest_captures.py  repro_acme_job_7009964.py  run_examples.py  serve_progress.py  verify_shipment_book.py
specs/: api-surface.md  workflow-recommendations.md
tests/: conftest.py  constants.py  example_run_results.json  gate_baseline.json  test_endpoint_docs_no_drift.py  test_example_call_signatures.py  test_example_coverage.py  test_example_params.py  test_example_run_results_drift.py  test_fixture_completeness.py  test_mock_coverage.py  test_progress_no_drift.py
(+832 files in other folders)
